objects/Pricing_Tool_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Process_Time_hours__c</fullName>
        <description>Process_Time_hours</description>
        <inlineHelpText>Number of hours the Project Pricing portion only, took per site to complete. Required when the Pricing Status changes to Completed</inlineHelpText>
        <label>Process Time (hours per Site)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Guarantee_Level__c</fullName>
        <inlineHelpText>should include % ;  if none, put none; also include duration</inlineHelpText>
        <label>Production Guarantee Level and Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <description>The ID of the project within the PVBid system.</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID of the project within the PVBid system.</inlineHelpText>
        <label>ProjectId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Developer__c</fullName>
        <formula>Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Developer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Specific_Insurance__c</fullName>
        <description>Missing costs that reduces margin post ROD approval</description>
        <inlineHelpText>Builder&apos;s Risk or other Premium non-standard insurance</inlineHelpText>
        <label>Project Specific Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Racking_Tilt_Angle__c</fullName>
        <label>Racking Tilt Angle</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestLevel__c</fullName>
        <inlineHelpText>Refer to the &quot;Pre-con Request Menu&quot; for description of levels</inlineHelpText>
        <label>Request Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L0 - Indicative, No Design</fullName>
                </value>
                <value>
                    <fullName>L1 - Indicative, With Design</fullName>
                </value>
                <value>
                    <fullName>L2 - At RFP / For Shortlist</fullName>
                </value>
                <value>
                    <fullName>L3 - At Shortlist / For Award</fullName>
                </value>
                <value>
                    <fullName>L4 - At Award / For Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <inlineHelpText>Shows the current status of the request for pricing.</inlineHelpText>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewed_with_Civil_Eng__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed with Civil Eng</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewed_with_Utility_Eng__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed with Utility Eng</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Status__c</fullName>
        <formula>Case(Opportunity__r.StageName, 
&quot;Prospecting&quot;, &quot;Prospecting&quot;, 
&quot;Proposal Submitted&quot;,&quot;Proposal Submitted&quot;, 
&quot;Shortlisted/Interviews&quot;,&quot;Shortlisted/Interviews&quot;, 
&quot;Project Awarded&quot;, &quot;Project Awarded&quot;, 
&quot;Closed Lost&quot;,&quot;Closed Lost&quot;, 
&quot;Not Ready / Pushed Out&quot;, &quot;Not Ready / Pushed Out&quot;, 
&quot;Contract Signed&quot;,&quot;Contract Signed&quot;, 
null)</formula>
        <inlineHelpText>Pulled through from Opportunity Stage</inlineHelpText>
        <label>Sales Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_Changes__c</fullName>
        <label>Scope Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope_Documents__c</fullName>
        <inlineHelpText>Enter the link to the Scope Documents folder.</inlineHelpText>
        <label>Scope Documents</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Checklist__c</fullName>
        <description>Link to the completed site visit checklist</description>
        <inlineHelpText>Link to the completed site visit checklist</inlineHelpText>
        <label>Site Visit Checklist</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Pricing Requests</relationshipLabel>
        <relationshipName>Pricing_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Approval status of the current pricing tool approval record</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Preliminary Approval</fullName>
                </value>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Previously Approved</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Energy_kWh__c</fullName>
        <label>Storage Energy (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_Power_kW__c</fullName>
        <label>Storage Power (kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_from_Pricing_Tool__c</fullName>
        <inlineHelpText>STC Watts (Pricing inputs cell K188)</inlineHelpText>
        <label>PV System Size from Estimating Tool</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_kWh__c</fullName>
        <label>Energy Storage System $/kWh</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_EPC_watt__c</fullName>
        <label>Target EPC $/watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Town_restrictions_or_mandates__c</fullName>
        <inlineHelpText>If no Planning board decision, list any town restrictions or mandates.</inlineHelpText>
        <label>Town restrictions or mandates?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Union_Oppty__c</fullName>
        <formula>TEXT( Opportunity__r.Union__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls value from development/captive-onsite opportunities</inlineHelpText>
        <label>Union</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Union__c</fullName>
        <description>OLD FIELD, DO NOT USE</description>
        <label>Union-DO NOT USE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_for_PB3_Approval__c</fullName>
        <description>Will be used in a validation rule to make another field - site walk checklist required if Yes is selected here</description>
        <inlineHelpText>Is this the pricing request that will be used for the PB3 Approval process?</inlineHelpText>
        <label>Used for PB3 Approval?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utility_Scale__c</fullName>
        <description>This is checked if the Opportunity is identified as Utility Scale</description>
        <formula>Opportunity__r.Utility_Scale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is checked if the Opportunity is identified as Utility Scale</inlineHelpText>
        <label>Utility Scale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utility_Upgrades__c</fullName>
        <description>Updated with value from PVbid using PVbid sync button.</description>
        <inlineHelpText>Updated with value from PVbid using PVbid sync button.</inlineHelpText>
        <label>Utility Upgrades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wage_Type__c</fullName>
        <description>Wage Type as listed on the Opportunity</description>
        <formula>TEXT(Opportunity__r.Wage_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wage Type as listed on the Opportunity</inlineHelpText>
        <label>Wage Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Sites_priced_in_this_request__c</fullName>
        <description>Number of Sites included in the Pricing Tool</description>
        <inlineHelpText>Number of Sites included in the Pricing Tool</inlineHelpText>
        <label># of Sites priced (in this request)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>watt_from_Opportunity__c</fullName>
        <formula>Opportunity__r.watt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>$/watt pulled through from the related opportunity</inlineHelpText>
        <label>$/watt from Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>watt_from_Pricing_Tool__c</fullName>
        <inlineHelpText>Pricing Summary cell I57</inlineHelpText>
        <label>$/watt from Pricing Tool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Pricing Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Pricing_Requests</fullName>
        <columns>NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Pricing_Needed_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Request_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Apps_Engineer_Logged_in__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Recalled,Expired</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <label>My Pricing Requests</label>
    </listViews>
    <nameField>
        <label>Pricing Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Requests</pluralLabel>
    <recordTypes>
        <fullName>Development</fullName>
        <active>true</active>
        <label>Development</label>
    </recordTypes>
    <recordTypes>
        <fullName>EPC</fullName>
        <active>true</active>
        <label>EPC</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Pricing_Needed_by_Must_be_24_hours</fullName>
        <active>true</active>
        <description>Date_Pricing_Needed_by_Must_be_24_hours from Date Entered</description>
        <errorConditionFormula>Date_Pricing_Needed_By__c = Date_Request_Entered__c &amp;&amp; ISPICKVAL(Request_Status__c, &quot;New&quot;)</errorConditionFormula>
        <errorDisplayField>Date_Pricing_Needed_By__c</errorDisplayField>
        <errorMessage>Please allow at least 1 business day for this request to be processed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Includes_Energy_Storage</fullName>
        <active>true</active>
        <description>Forces ESD fields to be filled out if the Pricing Request includes energy storage and the request is submitted
EPC Record Type only</description>
        <errorConditionFormula>AND(
 RecordType.Name = &quot;EPC&quot;,
 Pricing_Request_Completed__c = True,
 Includes_Storage__c = TRUE,
 DATEVALUE(CreatedDate) &gt; DATE (2018,09,03),
 OR(
  ISBLANK(ESD_Final_Price__c ),
  ISBLANK( ESD_Direct_COGS__c )
  )
 )</errorConditionFormula>
        <errorMessage>If the Pricing Request includes energy storage, ESD Final Price and ESD Direct COGS must be filled out in the Response Section before marking Pricing Request Complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobilization_Date_Required</fullName>
        <active>false</active>
        <description>Mobilization Date is required except on record creation. After record is created a workflow will bring in the Approximate Install Date from the Oppty. If Approx Install is blank then the user will have to manually enter a mobilization upon next edit.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(CreatedDate)),
    ISBLANK(Mobilization_Date__c),
    DATEVALUE(CreatedDate) &gt;  DATE(2018,9,5) )</errorConditionFormula>
        <errorDisplayField>Mobilization_Date__c</errorDisplayField>
        <errorMessage>Mobilization Date is required (except on initial record creation).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PT_Required_upon_completion</fullName>
        <active>true</active>
        <description>requires process time field to be filled out when completed</description>
        <errorConditionFormula>AND( ISBLANK(Process_Time_hours__c),
CreatedDate &gt; DATETIMEVALUE( &quot;2016-02-25 00:00:00&quot; ),
Pricing_Request_Completed__c = TRUE)</errorConditionFormula>
        <errorDisplayField>Process_Time_hours__c</errorDisplayField>
        <errorMessage>Please enter estimated process time (in hours) that it took the AE to complete this Pricing Request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Person_Responsible_Required_to_Submit</fullName>
        <active>true</active>
        <description>Person Responsible must be filled in for Pricing Request to be Submitted</description>
        <errorConditionFormula>AND(
 ISPICKVAL( Request_Status__c , &quot;Submitted&quot; ),
 ISBLANK( Person_Responsible__c )
)</errorConditionFormula>
        <errorMessage>Person Responsible must be filled out in order to submit a request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pricing_Request_Completed</fullName>
        <active>false</active>
        <description>ensures all fields are populated before completion box can be checked off.</description>
        <errorConditionFormula>AND(Pricing_Request_Completed__c = True, 

DATEVALUE(CreatedDate)&gt; DATE(2018,6,12),

OR((ISBLANK( Link_to_Pricing_Tool_on_box_com__c )),
(ISBLANK( Final_EPC_W__c  )),
(ISBLANK( Ineligible_costs__c)),
(ISBLANK( Final_EPC_Total__c  )),
(ISBLANK( Direct_Margin__c )),
(ISBLANK( Module_Price_Assumption__c )),
(ISBLANK( AE_Design_Notes_and_Scope_Concerns__c )),
(ISBLANK( System_Size_from_Pricing_Tool__c )),
(ISBLANK( Gross_Margin_from_the_Pricing_Tool__c ))))</errorConditionFormula>
        <errorDisplayField>Pricing_Request_Completed__c</errorDisplayField>
        <errorMessage>Pricing Request Completed cannot be checked off if any of the field within the Pricing Request Response section are blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Production_Guarantee_Level_Required</fullName>
        <active>true</active>
        <description>for any new pricing request created as of 12.01.15</description>
        <errorConditionFormula>ISBLANK( Production_Guarantee_Level__c ) &amp;&amp; ISNEW()</errorConditionFormula>
        <errorDisplayField>Production_Guarantee_Level__c</errorDisplayField>
        <errorMessage>Production Guarantee Level is required upon creation. If there is none, enter &quot;none&quot; in the field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Site_Visit_Checklist</fullName>
        <active>true</active>
        <description>Require site visit checklist to be filled out if &quot;used for PB3 Approval&quot; is Yes</description>
        <errorConditionFormula>AND(
ISPICKVAL( Used_for_PB3_Approval__c , &quot;Yes&quot;),
 Site_Visit_Checklist__c = null
)</errorConditionFormula>
        <errorDisplayField>Site_Visit_Checklist__c</errorDisplayField>
        <errorMessage>If this pricing request is uses for the PB3 Approval Process a Site Visit Checklist is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Union_Field_Has_a_Value</fullName>
        <active>true</active>
        <description>ensures the union field which is brought over from the opportunity has a value before submitting for approval</description>
        <errorConditionFormula>AND(
Opportunity__r.RecordTypeId = &quot;0123C000000GkAJQA0&quot;,
OR(ISPICKVAL(Opportunity__r.StageName,&quot;Qualified&quot;), ISPICKVAL(Opportunity__r.StageName,&quot;Project Booked&quot;), 
ISPICKVAL(Opportunity__r.StageName,&quot;LOI Signed&quot;),
ISPICKVAL(Opportunity__r.StageName, &quot;Option Lease Executed&quot;)),
OR(ISPICKVAL( Status__c ,&quot;New&quot;), ISPICKVAL( Status__c ,&quot;In Progress&quot;)),
ISBLANK( Union_Oppty__c ))</errorConditionFormula>
        <errorMessage>The Union field cannot be blank on EPC Opportunities.  To updated the Union field you need to go to the related Opportunity and update it there.  Once updated you will be able to save your record.</errorMessage>
    </validationRules>
</CustomObject>